# knot_floer_homology

./: .gitignore  MANIFEST.in  README.md  README.rst  exhaust.py  pyproject.toml  regress.py  setup.py
.github/workflows/: build.yml  macOS_universal.yml
ComputeHFKv2/: Alg.h  Alternating.cpp  Conway.txt  Crossing.cpp  Diagrams.cpp  Diagrams.h  HFKLib.cpp  HFKLib.h  HomologyRank.cpp  K1a39.txt  K2b86.txt  K3d91.txt  KT.txt  Knot18.txt  KnotFloer.cpp  Main.cpp  Makefile  Max.cpp  Min.cpp  PyObjectLight.h  PyWrapper.cpp  PyWrapper.h  PyWrapping.cpp  README.txt  Report.cpp  Simplify.cpp  Torus34.txt  Trefoil.txt  Utility.cpp  compile.sh
ComputeHFKv2/examples/: K3c83.txt  NegTorus34.txt  Random41.txt
cython_src/: _hfk.pyx  hfk.pyx
dev/: max_prime.py  nu_issue.py
python_src/: HFK_data.json  __init__.py  core.py  test.py
